<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">Settings</string>
    
    <string name="app_name">me</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="phone">Phone</string>
    
    <string name="hint_name">Enter name</string>
    <string name="hint_address">Enter address</string>
    <string name="hint_city">Enter city</string>
    <string name="hint_state">Enter state</string>
    <string name="hint_phone">Enter phone</string>
    
    <string name="editButton">Edit</string>
   	<string name="cancelButton">Cancel</string>
    <string name="saveButton">Save</string>
    
    <string name="no_save_data">Save NO new input.</string>
    <plurals name="save_data">
    	<item quantity="one">Save your new input.</item>
    	<item quantity="other">Save new %1$s inputs</item>
	</plurals>
    
    <string name="val_name">Raffael Santschi</string>
    <string name="val_address">1 Campus Dr</string>
    <string name="val_city">Allendale</string>
    <string name="val_state">Michigan</string>
    <string name="val_phone">iPhone</string>
    
	<string-array name="languages">
        <item>Select language</item>
        <item>Deutsch</item>
        <item>Espanol</item>
        <item>English</item>
	</string-array>   
</resources>
