<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" android:gravity="center_vertical|center_horizontal">
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:rowCount="7"
              android:columnCount="2"
        >
    <ImageView
            android:layout_width="233dp"
            android:layout_height="171dp"
            android:id="@+id/imageView" android:layout_gravity="center|left" android:src="@drawable/blub" android:layout_columnSpan="2"
            android:layout_row="0" android:layout_column="0"/>
    <Space
            android:layout_width="20px"
            android:layout_height="20px"
            android:id="@+id/space" android:layout_row="1" android:layout_column="1"/>
    <TextView
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:id="@+id/textView2" android:layout_gravity="center|left" android:layout_column="0" android:layout_row="2"
            android:textStyle="bold"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Raffael Santschi"
            android:id="@+id/textView2" android:layout_gravity="center|left" android:layout_column="1" android:layout_row="2"/>
    <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:id="@+id/textView2" android:layout_gravity="center|left" android:layout_column="0" android:layout_row="3"
            android:textStyle="bold"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1 Campus Dr"
            android:id="@+id/textView2" android:layout_gravity="center|left" android:layout_column="1" android:layout_row="3"/>
    <TextView
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:id="@+id/textView2" android:layout_gravity="center|left" android:layout_column="0" android:layout_row="4"
            android:textStyle="bold"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Allendale"
            android:id="@+id/textView2" android:layout_gravity="center|left" android:layout_column="1" android:layout_row="4"/>
    <TextView
            android:layout_width="123dp"
            android:layout_height="wrap_content"
            android:text="@string/state"
            android:id="@+id/textView2" android:layout_gravity="center|left" android:layout_column="0" android:layout_row="5"
            android:textStyle="bold"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Michigan"
            android:id="@+id/textView2" android:layout_gravity="center|left" android:layout_column="1" android:layout_row="5"/>
    <TextView
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:id="@+id/textView2" android:layout_gravity="center|left" android:layout_column="0" android:layout_row="6"
            android:textStyle="bold"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="iPhone"
            android:id="@+id/textView2" android:layout_gravity="center|left" android:layout_column="1" android:layout_row="6"/>
</GridLayout>
</RelativeLayout>

